endret navn på ting som ikke stemte

--- a/index.html
+++ b/index.html
@@ -11,19 +11,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <meta name="description" content="ogevneno">
-    <meta name="keywords" content="Adea">
-    <meta property="og:title" content="Adea's Nettside">
+    <meta name="keywords" content="MHAI">
+    <meta property="og:title" content="MHAI's Nettside">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://ash-kanna.github.io/portefoljeside/">
-    <meta property="og:image" content="bilder/mhai.png?format=webp">
-    <meta property="og:site_name" content="Adea's nettside">
+    <meta property="og:url" content="https://ash-kanna.github.io/MHAI/">
+    <meta property="og:image" content="blider/mhai.png?format=webp">
+    <meta property="og:site_name" content="MHAI's nettside">
 
-    <link rel="icon" href="bilder/mhai.png?format=webp" sizes="any">
-    <link rel="apple-touch-icon" href="bilder/mhai.png?format=webp" aria-label="Default">
-    <meta name="theme-color" content="#ffffff">
+    <link rel="icon" href="blider/mhai.png?format=webp" sizes="any">
+    <link rel="apple-touch-icon" href="blider/mhai.png?format=webp" aria-label="Default">
+    <meta name="theme-color" content="#ffff">
 
     <!-- Tittel på nettsiden som vises i nettleserfanen -->
-    <title>MHAI's Nettside | Entrepenør ide | inkludere lit prosjekt informasjon, ide og mer </title>
+    <title>MHAI's Nettside | Entrepenør ide | inkludere prosjekt informasjon, ide og mer </title>
     <!-- Kobler til en ekstern CSS-stilark for ekstra styling -->
     <link rel="stylesheet" href="style/style.css">
 
@@ -129,7 +129,7 @@
                 <section class="main__imge--container">
                     <!-- Bilde-seksjon for å vise en logo -->
                     <picture>
-                        <img loading="lazy" src="blider/MentalHAI-logo.jpg" alt="MHAI sin logo" />
+                        <img loading="lazy" src="blider/MentalHAI-logo.jpg" alt="MHAI sin logo. Gull ring med en hjerne i midten sammen med teksten Mental Healt AI" />
                     </picture>
                 </section>
             </div>
