endret navn og farger på noen tilg

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <div class="navbar">
             <div style="margin:0 10px 0 10px; height: inherit; display: flex; align-content:center; width:calc(100% - 20px);">
                 <div class="logo-container">
-                    <a id="navbar__logo">Adea's Nettside</a>
+                    <a id="navbar__logo">MHAI's Nettside</a>
                 </div>
                 <!-- Logo for nettsiden -->
                 <div class="navbar__container">
