--- a/ide.html
+++ b/ide.html
@@ -86,8 +86,9 @@
                     <img loading="lazy" src="blider/MentalHAI-logo.jpg" alt="MHAI sin logo. Gull ring med en hjerne i midten sammen med teksten Mental Healt AI" />
                 </picture>
             </section>
+        </div>
 
-            <section id="main__content"> 
+            <section id="main__content" id="main-2"> 
                 <h2 class="overskrifter"> Ide</h2>
                 <h3>Inspirasjon</h3>
                 <p> Jeg har altid syntes hvordan jeg og de rundt meg reagerer basert på hvordan vi har 
