--- a/kontakt.html
+++ b/kontakt.html
@@ -78,22 +78,14 @@
     </header>
     
     <main onload="applySavedPreferences()"> 
-        <!-- Hovedinnholdsområde -->
-        <div id="main-1">
-            <section class="main__imge--container">
-                <!-- Bilde-seksjon for å vise en logo -->
-                <picture>
-                    <img loading="lazy" src="blider/MentalHAI-logo.jpg" alt="MHAI sin logo. Gull ring med en hjerne i midten sammen med teksten Mental Healt AI" />
-                </picture>
-            </section>
-
-            <header id="header2"> </header>
+        <section id="main__content" id="main-2"> 
             <h2 class="overskrifter">Kontakt</h2>
-            <p> 
-                Opplever du problemer, eller har spørsmål? Ta kontakt med <a href="mailto:adea.hafnor@gmail.com">adea.hafnor@gmail.com</a>, for hjelp eller eventueller forbedringer eller klager.
-                Vil du vite mer om entrepenøren gå inn på 
-                <a href="http://127.0.0.1:5500/MHAI_nettside/MHAI/index.html#bio">MHAI's nettside</a> 
-            </p>
+                <p> 
+                    Opplever du problemer, eller har spørsmål? Ta kontakt med <a href="mailto:adea.hafnor@gmail.com">adea.hafnor@gmail.com</a>, for hjelp eller eventueller forbedringer eller klager.
+                    Vil du vite mer om entrepenøren gå inn på 
+                    <a href="http://127.0.0.1:5500/MHAI_nettside/MHAI/index.html#bio">MHAI's nettside</a> 
+                </p>
+        </section>
 
 <footer>
     <!-- Bunntekst med opphavsrettsinformasjon -->
