--- a/kontakt.html
+++ b/kontakt.html
@@ -16,7 +16,7 @@
     <meta property="og:site_name" content="MHAI's nettside">
 
     <link rel="icon" href="blider/mhai.png?format=webp" sizes="any">
-    <link rel="apple-touch-icon" href="blider/mhai.png?format=webp" aria-label="Default">
+    <link rel="apple-touch-icon" href="blider/MentalHAI-logo.png?format=webp" aria-label="Default">
     <meta name="theme-color" content="#ffff">
 
     <!-- Tittel på nettsiden som vises i nettleserfanen -->
