--- a/ide.html
+++ b/ide.html
@@ -12,11 +12,11 @@
     <meta property="og:title" content="MHAI's Nettside">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://ash-kanna.github.io/MHAI/">
-    <meta property="og:image" content="blider/mhai.png?format=webp">
+    <meta property="og:image" content="blider/MentalHAI-logo.png?format=webp">
     <meta property="og:site_name" content="MHAI's nettside">
 
-    <link rel="icon" href="blider/mhai.png?format=webp" sizes="any">
-    <link rel="apple-touch-icon" href="blider/mhai.png?format=webp" aria-label="Default">
+    <link rel="icon" href="blider/MentalHAI-logo.png?format=webp sizes="any">
+    <link rel="apple-touch-icon" href="blider/MentalHAI-logo.png?format=webp" aria-label="Default">
     <meta name="theme-color" content="#ffff">
 
     <!-- Tittel på nettsiden som vises i nettleserfanen -->
@@ -83,7 +83,7 @@
             <section class="main__imge--container">
                 <!-- Bilde-seksjon for å vise en logo -->
                 <picture>
-                    <img loading="lazy" src="blider/MentalHAI-logo.jpg" alt="MHAI sin logo. Gull ring med en hjerne i midten sammen med teksten Mental Healt AI" />
+                    <img loading="lazy" src="blider/MentalHAI-logo.png" alt="MHAI sin logo. Gull ring med en hjerne i midten sammen med teksten Mental Healt AI" />
                 </picture>
             </section>
         </div>
