--- a/kontakt.html
+++ b/kontakt.html
@@ -12,10 +12,10 @@
     <meta property="og:title" content="MHAI's Nettside">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://ash-kanna.github.io/MHAI/">
-    <meta property="og:image" content="blider/mhai.png?format=webp">
+    <meta property="og:image" content="blider/MentalHAI-logo.png?format=webp">
     <meta property="og:site_name" content="MHAI's nettside">
 
-    <link rel="icon" href="blider/mhai.png?format=webp" sizes="any">
+    <link rel="icon" href="blider/MentalHAI-logo.png?format=webp" sizes="any">
     <link rel="apple-touch-icon" href="blider/MentalHAI-logo.png?format=webp" aria-label="Default">
     <meta name="theme-color" content="#ffff">
 
@@ -78,6 +78,15 @@
     </header>
     
     <main onload="applySavedPreferences()"> 
+        <!-- Hovedinnholdsområde -->
+        <div id="main-1">
+            <section class="main__imge--container">
+                <!-- Bilde-seksjon for å vise en logo -->
+                <picture>
+                    <img loading="lazy" src="blider/kontakt.png" alt="E-mail symbolet. en svart sirkel med en gjenomsiktig konfulut" />
+                </picture>
+            </section>
+        </div>
         <section id="main__content" id="main-2"> 
             <h2 class="overskrifter">Kontakt</h2>
                 <p> 
