--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         </div>
         <section class="main__content" id="main-2">
             <section>
-                <h2 class="overskrifter">Litt om Prosjektet</h2>
+                <h2 class="overskrifter">Prosjektet</h2>
                     <p>M.H.A.I er kort for "Mental Healt Artifitial Intelligence".
                     Prosjektet begynnte ved starten av 2025. 
                     MHAI skal bli en AI-chatbot hvor forlk kan prate med AI-en om hvordan de føler seg og 
