--- a/ide.html
+++ b/ide.html
@@ -20,7 +20,7 @@
     <meta name="theme-color" content="#ffff">
 
     <!-- Tittel på nettsiden som vises i nettleserfanen -->
-    <title>MHAI's Nettside | Entrepenør ide | inkludere prosjekt informasjon, ide og mer </title>
+    <title>MHAI's Nettside | Entrepenør ide | inkludere prosjekt informasjon, ide og mer| ide </title>
     <!-- Kobler til en ekstern CSS-stilark for ekstra styling -->
     <link rel="stylesheet" href="style/style.css">
     <link rel="stylesheet" href="kontakt.html">
