--- a/ide.html
+++ b/ide.html
@@ -90,23 +90,26 @@
 
             <section id="main__content" id="main-2"> 
                 <h2 class="overskrifter"> Ide</h2>
-                <h3>Inspirasjon</h3>
-                <p> Jeg har altid syntes hvordan jeg og de rundt meg reagerer basert på hvordan vi har 
-                    vokst opp og oppfatter til er interesant. Så når jeg skulle komme på en idea om hva 
-                    jeg kan lage i fremtiden med teknologi syntes jeg M.H.A.I. var perfekt som mitt første 
-                    prosjekt. Jeg har lest flere artikler som handler om at ungdoms mentale helse blir værre 
-                    og værre med årende som går. Det er her jeg vil at M.H.A.I. skal hjelpe til. </p>
+                <section id="text"> 
+                    <h3>Inspirasjon</h3>
+                    <p> Jeg har altid syntes hvordan jeg og de rundt meg reagerer basert på hvordan vi har 
+                        vokst opp og oppfatter til er interesant. Så når jeg skulle komme på en idea om hva 
+                        jeg kan lage i fremtiden med teknologi syntes jeg M.H.A.I. var perfekt som mitt første 
+                        prosjekt. Jeg har lest flere artikler som handler om at ungdoms mentale helse blir værre 
+                        og værre med årende som går. Det er her jeg vil at M.H.A.I. skal hjelpe til. </p>
 
-                <h3>Passende kunder</h3>
-                <p> M.H.A.I. kan være nyttig for alle som ånsker å prate om hendelser eller følelser i livet dems, 
-                    uten om å betale like mye som en onkelig terapaut. Med det i tankene må alle brukere være klar 
-                    over at M.H.A.I. ikke er en onkelig terapaut og at det er hvorfor prisen er lavere. </p>
+                    <h3>Passende kunder</h3>
+                    <p> M.H.A.I. kan være nyttig for alle som ånsker å prate om hendelser eller følelser i livet dems, 
+                        uten om å betale like mye som en onkelig terapaut. Med det i tankene må alle brukere være klar 
+                        over at M.H.A.I. ikke er en onkelig terapaut og at det er hvorfor prisen er lavere. </p>
 
-                <h3>Hva jobber M.H.A.I. mot?</h3>
-                <p>M.H.a.I er ment for å gjøre den mentale helsen til folk bedre enn det den er nå. M.H.A.I's mål 
-                    er nemlig å få alle som bruker den til å føle at de kan snakke om til å på en måte slippe tonge
-                    følelser eller hendelser med noen andre samtidig som de forblir anonyme og kommer ikke til å "byrde"
-                    noen andre med hva de forteller om. </p>
+                    <h3>Hva jobber M.H.A.I. mot?</h3>
+                    <p>M.H.a.I er ment for å gjøre den mentale helsen til folk bedre enn det den er nå. M.H.A.I's mål 
+                        er nemlig å få alle som bruker den til å føle at de kan snakke om til å på en måte slippe tonge
+                        følelser eller hendelser med noen andre samtidig som de forblir anonyme og kommer ikke til å "byrde"
+                        noen andre med hva de forteller om. </p>
+                </section>
+                    
             </section>
     </main>
 
