--- a/produkt.html
+++ b/produkt.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html lang="no">
 <style type="text/css">
-    body{
+    .front, .back{
         font-family: calibri;
-        min-height: 100vh;
     }
 
     .card-container{
-        perspective: 1000px;
+        perspective: 1500px;
     }
 
     .card{
@@ -137,15 +136,6 @@
     
     <main onload="applySavedPreferences()"> 
         <!-- Hovedinnholdsområde -->
-        <div id="main-1">
-            <section class="main__imge--container">
-                <!-- Bilde-seksjon for å vise en logo -->
-                <picture>
-                    <img loading="lazy" src="blider/MentalHAI-logo.png" alt="MHAI sin logo. Gull ring med en hjerne i midten sammen med teksten Mental Healt AI" />
-                </picture>
-            
-            </section>
-        </div>
         <section class="main__content" id="main-2">
             <section>
                 <h2 class="overskrifter">Fremdrift</h2>
@@ -159,7 +149,7 @@
             <div class="card-container"> 
                 <div class="card">
                     <div class="front">
-                        <h3>MHAI lenke bak</h3>
+                        <h3>MHAI lenke til chatbot bak</h3>
                     </div>
                     <div class="back">
                         <h3>Kommer .... </h3>
