--- a/om_oss.html
+++ b/om_oss.html
@@ -89,7 +89,7 @@
     </header>
     
     <main onload="applySavedPreferences()"> 
-        <section id="main__content" id="main-2"> 
+        <section id="main__content" id="main-2" style="width: 40rem;"> 
             <h2 class="overskrifter">Om oss</h2>
                 <p> 
                     Jeg heter Adea, og er 16 år gammel. Jeg er intresert i web- og andre IT-utvikklingsrelaterte ting. Går nå på Hønefoss vgs for å utdanne meg innenfor IT-utvikkling.
