--- a/kontakt.html
+++ b/kontakt.html
@@ -103,7 +103,7 @@
                 <p> 
                     Opplever du problemer, eller har spørsmål? Ta kontakt med <a href="mailto:adea.hafnor@gmail.com">adea.hafnor@gmail.com</a>, for hjelp eller eventueller forbedringer eller klager.
                     Vil du vite mer om entrepenøren gå inn på 
-                    <a href="https://ash-kanna.github.io/portefoljeside/">MHAI's nettside</a> 
+                    <a href="https://ash-kanna.github.io/portefoljeside/">Adea's nettside</a> 
                 </p>
         </section>
 
