--- a/om_oss.html
+++ b/om_oss.html
@@ -48,7 +48,7 @@
                 </div>
                 <!-- Logo for nettsiden -->
                 <div class="navbar__container">
-                    <md-icon-button id="usage-anchor" aria-label="Contact menu"><md-icon>menu</md-icon></md-icon-button>
+                    <md-icon-button id="usage-anchor" aria-label="Contact menu" style=".standard:hover{color:#ffffff;} .standard{color:#ffffff;}"><md-icon style="color: #ffffff;">menu</md-icon></md-icon-button>
                     <md-menu id="usage-menu" anchor="usage-anchor" positioning="fixed">
     
                         <a href="index.html" class="navbar__links">
@@ -79,7 +79,7 @@
 
                     </md-menu>
                     <div class="navbar__textSize">
-                        <p style="color: #1c438f;">Text Size</p>
+                        <p style="color: #ffffff;">Text Size</p>
                         <button class="button2" onclick="changeFontSize('increase')"> + </button>
                         <button class="button2" onclick="changeFontSize('decrease')"> - </button>
                    </div>
@@ -88,16 +88,24 @@
         </div>
     </header>
     
-    <main onload="applySavedPreferences()"> 
+    <main onload="applySavedPreferences()" style="padding-bottom:16rem;"> 
         <section id="main__content" id="main-2" style="width: 40rem;"> 
             <h2 class="overskrifter">Om oss</h2>
                 <p> 
                     Jeg heter Adea, og er 16 år gammel. Jeg er intresert i web- og andre IT-utvikklingsrelaterte ting. Går nå på Hønefoss vgs for å utdanne meg innenfor IT-utvikkling.
                     Språk jeg kan: Python, HTML, CSS, Javascript, Prosjekt.
-                    M.H.A.I er kort for "Mental Healt Artifitial Intelligence". Prosjektet begynnte ved starten av 2025.  Vis du vil lese mer om meg gå inn på 
-                    <a href="https://ash-kanna.github.io/portefoljeside/">Adea's nettside</a> 
+                    M.H.A.I er kort for "Mental Healt Artifitial Intelligence". Prosjektet begynnte ved starten av 2025.
                 </p>
         </section>
+        <div class="container">
+            <div class="drop" style="--clr:rgb(111, 163, 161);">
+                <div class="content">
+                    <h2>1</h2>
+                    <p>        Vis du vil lese mer om meg gå inn på min nettside</p>
+                    <a href="https://ash-kanna.github.io/portefoljeside/">Adea's nettside</a> 
+                </div>
+            </div>
+
 
 <footer>
     <!-- Bunntekst med opphavsrettsinformasjon -->
