--- a/personvern.html
+++ b/personvern.html
@@ -48,7 +48,7 @@
                 </div>
                 <!-- Logo for nettsiden -->
                 <div class="navbar__container">
-                    <md-icon-button id="usage-anchor" aria-label="Contact menu"><md-icon>menu</md-icon></md-icon-button>
+                    <md-icon-button id="usage-anchor" aria-label="Contact menu" style=".standard:hover{color:#ffffff;} .standard{color:#ffffff;}"><md-icon style="color: #ffffff;">menu</md-icon></md-icon-button>
                     <md-menu id="usage-menu" anchor="usage-anchor" positioning="fixed">
 
                         <a href="index.html" class="navbar__links">
@@ -78,7 +78,7 @@
 
                     </md-menu>
                     <div class="navbar__textSize">
-                        <p style="color: #1c438f;">Text Size</p>
+                        <p style="color: #ffffff;">Text Size</p>
                         <button class="button2" onclick="changeFontSize('increase')"> + </button>
                         <button class="button2" onclick="changeFontSize('decrease')"> - </button>
                    </div>
