--- a/produkt.html
+++ b/produkt.html
@@ -95,7 +95,7 @@
                 </div>
                 <!-- Logo for nettsiden -->
                 <div class="navbar__container">
-                    <md-icon-button id="usage-anchor" aria-label="Contact menu"><md-icon>menu</md-icon></md-icon-button>
+                    <md-icon-button id="usage-anchor" aria-label="Contact menu" style=".standard:hover{color:#ffffff;} .standard{color:#ffffff;}"><md-icon style="color: #ffffff;">menu</md-icon></md-icon-button>
                     <md-menu id="usage-menu" anchor="usage-anchor" positioning="fixed">
 
                         <a href="index.html" class="navbar__links">
@@ -125,7 +125,7 @@
 
                     </md-menu>
                     <div class="navbar__textSize">
-                        <p style="color: #1c438f;">Text Size</p>
+                        <p style="color: #ffffff;">Text Size</p>
                         <button class="button2" onclick="changeFontSize('increase')"> + </button>
                         <button class="button2" onclick="changeFontSize('decrease')"> - </button>
                    </div>
@@ -134,17 +134,9 @@
         </div>
     </header>
     
-    <main onload="applySavedPreferences()"> 
+    <main onload="applySavedPreferences()" style="padding-bottom:23.5rem;"> 
         <!-- Hovedinnholdsområde -->
         <section class="main__content" id="main-2">
-            <section>
-                <h2 class="overskrifter">Fremdrift</h2>
-                    <p>
-                        MHAI chatbot er under utviklig, oppdateringer kommer...
-                    </p>  
-                    </section>
-        </section>
-
         <div id="main-3">
             <div class="card-container"> 
                 <div class="card">
@@ -158,6 +150,14 @@
             </div>
         </div>
         
+            <section>
+                <h2 class="overskrifter">Fremdrift</h2>
+                    <p id="text">
+                        MHAI chatbot er under utviklig, oppdateringer kommer...
+                    </p>  
+                    </section>
+        </section>
+
     </main>
 
 
