--- a/ide.html
+++ b/ide.html
@@ -116,9 +116,9 @@
 
                     <h3>Hva jobber M.H.A.I. mot?</h3>
                     <p>M.H.a.I er ment for å gjøre den mentale helsen til folk bedre enn det den er nå. M.H.A.I's mål 
-                        er nemlig å få alle som bruker den til å føle at de kan snakke om til å på en måte slippe tonge
-                        følelser eller hendelser med noen andre samtidig som de forblir anonyme og kommer ikke til å "byrde"
-                        noen andre med hva de forteller om. </p>
+                        er å få alle brukere til å føle at de kan snakke om ting på en måte som følers ut som å 
+                        slippe tonge følelser eller hendelser med noen andre, samtidig som de forblir anonyme og ikke 
+                        kommer til å "byrde" noen andre med hva de føler eller forteller om. </p>
                 </section>
             </section>
     </main>
