--- a/ide.html
+++ b/ide.html
@@ -89,37 +89,42 @@
             </div>
         </div>
     </header>
-    
-    <main onload="applySavedPreferences()" style="flex-direction: column;"> 
-        <!-- Hovedinnholdsområde -->
-        <div id="main-1" id="main__content">
-                <!-- Bilde-seksjon for å vise en logo -->
-                <picture>
-                    <img style="justify-self: center; align-self: center;"   loading="lazy" src="blider/MentalHAI-logo.png" alt="MHAI sin logo. Gull ring med en hjerne i midten sammen med teksten Mental Healt AI" />
-                </picture>
-        </div>
+        <!-- Hovedinnholdsområde -->    
+    <main onload="applySavedPreferences()" style="align-content: center; justify-content:space-evenly; align-items: center;"> 
+            <h2 class="overskrifter" style="width: 25rem; flex: 5%;"> Ide</h2>
 
-            <section id="main__content" id="main-2" style="width: 20rem;"> 
-                <h2 class="overskrifter"> Ide</h2>
-                <section id="text"> 
-                    <h3>Inspirasjon</h3>
-                    <p> Jeg har altid syntes hvordan jeg og de rundt meg reagerer basert på hvordan vi har 
+                <div id="main-1" style="width: 20rem;">
+                        <!-- Bilde-seksjon for å vise en logo -->
+                        <picture>
+                            <img style="justify-self: center; align-self: center;"   loading="lazy" src="blider/MentalHAI-logo.png" alt="MHAI sin logo. Gull ring med en hjerne i midten sammen med teksten Mental Healt AI" />
+                        </picture>
+                </div> 
+
+            <section class="main__content" id="main-2" style="align-content: space-around; justify-content:space-around; align-items: center;">
+               
+                <div class="card2"> 
+                    <h1 class="card-title">Inspirasjon</h1>
+                    <p class="card-text"> Jeg har altid syntes hvordan jeg og de rundt meg reagerer basert på hvordan vi har 
                         vokst opp og oppfatter til er interesant. Så når jeg skulle komme på en idea om hva 
                         jeg kan lage i fremtiden med teknologi syntes jeg M.H.A.I. var perfekt som mitt første 
                         prosjekt. Jeg har lest flere artikler som handler om at ungdoms mentale helse blir værre 
                         og værre med årende som går. Det er her jeg vil at M.H.A.I. skal hjelpe til. </p>
+                </div>
 
-                    <h3>Passende kunder</h3>
-                    <p> M.H.A.I. kan være nyttig for alle som ånsker å prate om hendelser eller følelser i livet dems, 
+                <div class="card2">
+                    <h1 class="card-title">Passende kunder</h1>
+                    <p class="card-text"> M.H.A.I. kan være nyttig for alle som ånsker å prate om hendelser eller følelser i livet dems, 
                         uten om å betale like mye som en onkelig terapaut. Med det i tankene må alle brukere være klar 
                         over at M.H.A.I. ikke er en onkelig terapaut og at det er hvorfor prisen er lavere. </p>
+                </div>
 
-                    <h3>Hva jobber M.H.A.I. mot?</h3>
-                    <p>M.H.a.I er ment for å gjøre den mentale helsen til folk bedre enn det den er nå. M.H.A.I's mål 
+                <div class="card2">
+                    <h1 class="card-title">Hva jobber M.H.A.I. mot?</h1>
+                    <p class="card-text">M.H.a.I er ment for å gjøre den mentale helsen til folk bedre enn det den er nå. M.H.A.I's mål 
                         er å få alle brukere til å føle at de kan snakke om ting på en måte som følers ut som å 
                         slippe tonge følelser eller hendelser med noen andre, samtidig som de forblir anonyme og ikke 
                         kommer til å "byrde" noen andre med hva de føler eller forteller om. </p>
-                </section>
+                </div>
             </section>
     </main>
 
