--- a/index.html
+++ b/index.html
@@ -87,15 +87,9 @@
         </div>
     </header>
     
-    <main onload="applySavedPreferences()"style="justify-content: center; align-items: center; padding-bottom:10rem;"> 
+    <main onload="applySavedPreferences()"style="justify-content: center; align-items: center; padding-bottom:10rem"> 
         <!-- Hovedinnholdsområde -->
         <div id="main-2" >
-            <section>
-                <!-- Bilde-seksjon for å vise en logo -->
-                <picture>
-                    <img loading="lazy" src="blider/MentalHAI-logo.png" alt="MHAI sin logo. Gull ring med en hjerne i midten sammen med teksten Mental Healt AI" />
-                </picture>
-            </section>
             <section class="main__content"style="justify-content: center; align-items: center;">
                 <div class="card2">
                         <p class="card-text">M.H.A.I er kort for "Mental Healt Artifitial Intelligence".
@@ -103,6 +97,12 @@
                         MHAI skal bli en AI-chatbot hvor forlk kan prate med AI-en om hvordan de føler seg og 
                         få tips og råd som en/fler psykolog/er har hjelpet Ai-en å forstå og gi.</p>
                 </div>
+            </section>
+            <section>
+                <!-- Bilde-seksjon for å vise en logo -->
+                <picture>
+                    <img loading="lazy" src="blider/MentalHAI-logo.png" alt="MHAI sin logo. Gull ring med en hjerne i midten sammen med teksten Mental Healt AI" />
+                </picture>
             </section>
         </div>
         <div class="container">
