--- a/om_oss.html
+++ b/om_oss.html
@@ -101,7 +101,7 @@
             <div class="drop" style="--clr:rgb(111, 163, 161);">
                 <div class="content">
                     <h2>1</h2>
-                    <p>        Vis du vil lese mer om meg gå inn på min nettside</p>
+                    <p>        Vis du vil lese mer om Adea gå inn på denne nettsiden</p>
                     <a href="https://ash-kanna.github.io/portefoljeside/">Adea's nettside</a> 
                 </div>
             </div>
