bilde feil rettet

--- a/kontakt.html
+++ b/kontakt.html
@@ -89,23 +89,25 @@
     </header>
     
     <main onload="applySavedPreferences()" style="padding-bottom:29rem;"> 
+        <div id="main__content" id="main-2" style="display: flex; flex-direction: row;"> 
         <!-- Hovedinnholdsområde -->
-        <div id="main-1">
-            <section class="main__imge--container">
+            <section>
                 <!-- Bilde-seksjon for å vise en logo -->
                 <picture>
-                    <img loading="lazy" src="blider/kontakt.png" alt="E-mail symbolet. en svart sirkel med en gjenomsiktig konfulut" />
+                    <img loading="lazy" src="blider/kontakt.png" alt="MHAI sin logo. Gull ring med en hjerne i midten sammen med teksten Mental Healt AI" />
                 </picture>
             </section>
-        </div>
-        <section id="main__content" id="main-2" style="flex: 40rem;"> 
-            <h2 class="overskrifter">Kontakt</h2>
-                <p> 
-                    Opplever du problemer, eller har spørsmål? Ta kontakt med <a href="mailto:adea.hafnor@gmail.com">adea.hafnor@gmail.com</a>, for hjelp eller eventueller forbedringer eller klager.
+            <section>
+                <h2 class="overskrifter">Kontakt</h2>
+                <p> Opplever du problemer, eller har spørsmål? Ta kontakt 
+                    med <a href="mailto:adea.hafnor@gmail.com">adea.hafnor@gmail.com</a>, 
+                    for hjelp eller eventueller forbedringer eller klager.
                     Vil du vite mer om entrepenøren gå inn på 
                     <a href="https://ash-kanna.github.io/portefoljeside/">Adea's nettside</a> 
                 </p>
-        </section>
+            </section>
+                
+        </div>
 
 <footer>
     <!-- Bunntekst med opphavsrettsinformasjon -->
