--- a/kontakt.html
+++ b/kontakt.html
@@ -94,17 +94,14 @@
             <section>
                 <!-- Bilde-seksjon for å vise en logo -->
                 <picture>
-                    <img loading="lazy" src="blider/kontakt.png" alt="MHAI sin logo. Gull ring med en hjerne i midten sammen med teksten Mental Healt AI" />
+                    <img loading="lazy" src="blider/kontakt.png" alt="E-mail symbolet i en sort sirkel" />
                 </picture>
             </section>
             <section>
                 <h2 class="overskrifter">Kontakt</h2>
                 <p> Opplever du problemer, eller har spørsmål? Ta kontakt 
                     med <a href="mailto:adea.hafnor@gmail.com">adea.hafnor@gmail.com</a>, 
-                    for hjelp eller eventueller forbedringer eller klager.
-                    Vil du vite mer om entrepenøren gå inn på 
-                    <a href="https://ash-kanna.github.io/portefoljeside/">Adea's nettside</a> 
-                </p>
+                    for hjelp eller eventueller forbedringer eller klager.</p>
             </section>
                 
         </div>
